--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3234,7 +3234,7 @@ input, select, textarea {
 			    width: 100%;
 			    height: 100%;
 			    background-color: #212931;
-			    background-image: url("../../images/overlay.png"), linear-gradient(0deg, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../images/RedRocksRainbow.jpg");
+			    background-image: url("../../images/RedRocksRainbow.jpg");
 			    background-size: cover;
 			    background-position: center;
 			    background-repeat: no-repeat;
